--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Click==7.0
 colorama==0.4.1
 Flask==1.1.1
 Flask-Classful==0.14.2
+Flask-Cors==3.0.8
 flask-marshmallow==0.10.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
