--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ atomicwrites==1.3.0
 attrs==19.1.0
 Click==7.0
 colorama==0.4.1
+gunicorn==19.9.0
 Flask==1.1.1
 Flask-Classful==0.14.2
 Flask-Cors==3.0.8
